@@ -1,0 +1,58 @@
+# -*-perl-*-
+# Configuration file for codestriker.pl.
+
+# Location of where to store the code review data.  Make sure the
+# permissions are set appropriately.  If running apache, make sure the
+# following directory is writable to the user running httpd (usually
+# "nobody" or "apache").  Each topic is stored in its own sub-directory,
+# whose name is just a random bunch of digits.
+$datadir= "/var/www/codestriker";
+
+# Location of sendmail.
+$sendmail = "/usr/lib/sendmail";
+
+# The URL to the bug tracking system.  The bug number is appended to the
+# end of this string when URLs are generated.
+$bugtracker = "";
+#$bugtracker = "http://localhost.localdomain/show_bug.cgi?id=";
+
+# The URL to the CVS viewing system.  The filename is appended to the end
+# of this string when URLs are generated.
+$cvsviewer = "";
+#$cvsviewer = "http://localhost.localdomain/cgi-bin/viewcvs.cgi/";
+#$cvsviewer = "http://localhost.localdomain/cgi-bin/cvsweb.cgi/";
+
+# How the CVS repository is accessed.  For local access, this is set as the
+# empty string.
+#$cvsaccess = ":ext:sits\@cvs.cvsplot.sourceforge.net:";
+$cvsaccess = "";
+
+# Set this to the path of the CVS repository.
+$cvsrep = "";
+#$cvsrep = "/usr/local/cvsroot";
+#$cvsrep = "/home/sits/cvs";
+
+# The CVS command to execute in order to retrieve file data.  The revision
+# argument and filename is appended to the end of this string.
+$cvscmd = "/usr/bin/cvs -d ${cvsaccess}${cvsrep} co -p";
+
+# The location of the codestriker.css file on this site.
+$codestriker_css = "/codestriker.css";
+
+# The default viewing mode to use in the URL when creating a topic.  Can
+# be either $NORMAL_MODE or $COOURED_MODE.
+$default_topic_create_mode = $NORMAL_MODE;
+
+# Set the CVS_RSH environment variable appropriately.  The indentity
+# file refers to a user which has ssh access to the above CVS repository.
+# If the repository is local, this setting won't be required, as $cvsrep will
+# just be the local pathname.  Make sure this is in a secure location.
+#$ENV{'CVS_RSH'} = "ssh -i /var/www/codestriker/identity";
+#$ENV{'CVS_RSH'} = "ssh";
+
+# Don't allow posts larger than 500K.
+$CGI::POST_MAX=1024 * 500;
+
+# Background colours for normal and diff modes.
+$background_col = "#ffffff";
+$diff_background_col = "#eeeeee";
